Allow single issue in Markdown
